samples/gateway/gatewayclass.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: sail
spec:
  controllerName: inendless.com/gateway-controller
