samples/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
  - name: sail
  hostnames:
  - "foo.bar.com"
  rules:
  - matches:
    backendRefs:
    - name: backend-sail
      port: 8085
      weight: 50
    - name: backend
      port: 80
      weight: 50
