samples/gateway/httproute01.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route01
spec:
  parentRefs:
  - name: sail
  hostnames:
  - "bar1.example.com"
  rules:
  - backendRefs:
    - name: hello-web
      port: 80
